--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-@import url(https://fonts.googleapis.com/css?family=Marmelad);
-@import url(https://fonts.googleapis.com/css?family=Abril+Fatface);
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Candal);
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -5815,10 +5815,9 @@ button.close {
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Noto Serif';
-  font-weight: 100;
-  font-size: 20px;
-  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  font-weight: lighter;
+  font-size: 18px;
   box-sizing: border-box; }
 
 .w-100 {
@@ -5837,7 +5836,7 @@ a:hover {
   text-decoration: none; }
 
 .pd-50 {
-  padding-top: 50px; }
+  margin-top: 50px; }
 
 .navbar-fixed-top {
   background: #ffffff; }
@@ -5873,7 +5872,10 @@ a:hover {
   color: #F2385A; }
 
 .nav li .link-header {
-  color: white; }
+  color: white;
+  font-weight: lighter;
+  font-family: 'Roboto';
+  font-size: 17px; }
 .nav li a:hover {
   color: #F2385A;
   background: white; }
@@ -5961,7 +5963,7 @@ a:hover {
 
 .title {
   color: #F2385A;
-  font-family: "Abril Fatface";
+  font-family: "Montserrat";
   font-size: 3rem;
   padding-bottom: 30px; }
 
@@ -5970,9 +5972,38 @@ a:hover {
   justify-content: space-between; }
   .titulo p {
     animation-delay: 0.2s;
-    font-family: "Abril Fatface";
+    font-family: "Montserrat";
     color: #F2385A;
     font-size: 4rem; }
+
+.contactame {
+  position: fixed;
+  left: 0;
+  top: 200px;
+  z-index: 2000; }
+
+.contactame ul {
+  list-style: none; }
+  .contactame ul li a {
+    display: inline-block;
+    color: #fff;
+    background: #000;
+    padding: 10px 15px;
+    text-decoration: none;
+    -webkit-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease; }
+  .contactame ul li .fa {
+    width: 50px; }
+  .contactame ul li a:hover {
+    padding: 10px 30px;
+    background: black; }
+  .contactame ul li .fa-facebook {
+    background: #3b5998; }
+  .contactame ul li .fa-google-plus {
+    background: #DC4A38; }
+  .contactame ul li .fa-linkedin {
+    background: #1060A6; }
 
 .banner {
   width: 50%; }
@@ -6077,54 +6108,52 @@ a:hover {
   -ms-transform-origin: 100% 100%;
   -o-transform-origin: 100% 100%; }
 
-.col-etiqueta p {
-  color: black;
-  font-size: 30px; }
+.description p:first-child {
+  padding: 50px 0;
+  font-size: 20px;
+  color: #F2385A;
+  font-weight: 300; }
+.description .foto {
+  margin-top: 100px; }
 
-.ln1 {
-  background: #F2385A;
-  margin: auto;
-  height: 1px;
-  width: 70%; }
+.lema {
+  color: white;
+  -ms-display: flex;
+  display: flex;
+  /* vertical center */
+  align-items: center;
+  /* horizontal center */
+  justify-content: center;
+  height: 200px;
+  font-size: 15px; }
+  .lema h2 {
+    margin: 0; }
 
-.contenedor {
-  height: 30px; }
+#lema {
+  background-color: #56D9CD; }
 
-.etiqueta {
-  width: 0px;
-  border-left: 50px solid #F2385A;
-  border-right: 50px solid #F2385A;
-  left: 50%;
-  margin-left: -50px;
-  position: relative; }
+.about_text h1 {
+  font-family: 'Candal';
+  margin: 0; }
+.about_text h1:first-child {
+  font-size: 50px;
+  color: #F2385A; }
+  .about_text h1:first-child span {
+    font-size: 18px;
+    font-weight: bold; }
+.about_text h1:last-child {
+  color: #F2385A; }
+  .about_text h1:last-child span {
+    font-size: 20px;
+    font-weight: bold; }
 
-.etiq {
-  height: 190px;
-  border-bottom: 35px solid transparent;
-  top: 0; }
-
-.etiq2 {
-  border-top: 35px solid transparent;
-  position: relative;
-  bottom: 0;
-  height: 160px; }
-
-.poligono {
-  margin: 20px 0;
-  width: 100%;
-  height: 340px;
-  background-position: 50% 34%;
-  background-size: 150%;
-  border-radius: 50%;
-  padding: 80px 0; }
-
-.actitudes {
-  display: block; }
+.about_p {
+  padding-top: 50px; }
 
 .col-foto p:first-child {
   font-weight: lighter;
   font-size: 30px;
-  font-family: "Abril Fatface";
+  font-family: "Montserrat";
   color: #F2385A;
   margin-top: 30px; }
 .col-foto hr:nth-child(2) {
@@ -6140,114 +6169,49 @@ a:hover {
   color: white;
   background: #F2385A; }
 
-.description .col-sm-6 p {
-  margin-top: 25px;
-  font-family: "Noto Serif";
-  color: #2C3E50;
-  font-size: 19px;
-  font-weight: bold; }
-.description .col-sm-6 .foto {
-  height: 350px;
-  width: 90%; }
-.description .col-sm-6 h2 {
-  font-weight: bold;
-  color: #337ab7; }
-
 .hero1 {
   height: 500px; }
 
-.col-sm-4 .portafolio {
+.col-sm-6 .portafolio {
   position: relative;
-  height: 250px;
-  margin-bottom: 20px; }
-  .col-sm-4 .portafolio .pantalla {
-    box-shadow: -5px -5px 5px 0px #d1d1d1;
-    position: absolute;
-    border: 13px solid black;
-    border-radius: 8px;
-    height: 200px;
+  height: 230px;
+  margin-bottom: 30px; }
+  .col-sm-6 .portafolio .slider {
     width: 100%;
-    -webkit-perspective: 700; }
-    .col-sm-4 .portafolio .pantalla .carta {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      transform-style: preserve-3d;
-      transition: 2s;
-      box-shadow: 0px 0px 5px black; }
-      .col-sm-4 .portafolio .pantalla .carta .lado {
-        width: 100%;
-        height: 100%;
-        position: absolute; }
-      .col-sm-4 .portafolio .pantalla .carta .frente {
-        background: crimson;
-        background-visibility: hidden; }
-        .col-sm-4 .portafolio .pantalla .carta .frente img {
-          width: 100%;
-          height: 100%; }
-      .col-sm-4 .portafolio .pantalla .carta .atras {
-        background: white;
-        transform: rotateY(180deg); }
-        .col-sm-4 .portafolio .pantalla .carta .atras h4 {
-          text-decoration: underline;
-          font-weight: bold;
-          margin-bottom: 0;
-          color: blue; }
-        .col-sm-4 .portafolio .pantalla .carta .atras .texto {
-          font-size: 15px;
-          margin: 0; }
-        .col-sm-4 .portafolio .pantalla .carta .atras .texto:hover {
-          background: #F2385A;
-          color: white; }
-        .col-sm-4 .portafolio .pantalla .carta .atras a {
-          color: #F2385A; }
-        .col-sm-4 .portafolio .pantalla .carta .atras a:hover {
-          background: #F2385A;
-          color: white;
-          display: inline-block;
-          width: 100%;
-          font-size: 18px; }
-    .col-sm-4 .portafolio .pantalla .carta:hover {
-      transform: rotateY(180deg); }
-    .col-sm-4 .portafolio .pantalla .btn-star {
-      position: absolute;
-      bottom: -10px;
-      right: 50%;
-      border-radius: 50%;
-      height: 10px;
-      width: 12px;
-      margin-right: -6px;
-      background-image: url("../img/windows.png");
-      background-size: cover; }
-    .col-sm-4 .portafolio .pantalla .parante {
-      position: absolute;
-      width: 50px;
-      bottom: -43px;
-      height: 30px;
-      right: 50%;
-      background: black;
-      margin-right: -25px;
-      box-shadow: -11px 1px 7px -2px #d1d1d1; }
-    .col-sm-4 .portafolio .pantalla .base {
-      position: absolute;
-      width: 100px;
-      bottom: -50px;
-      height: 0px;
-      right: 50%;
-      margin-right: -50px;
-      border-right: 5px solid transparent;
-      border-left: 5px solid transparent;
-      border-bottom: 10px solid black; }
-  .col-sm-4 .portafolio a .informacion {
-    visibility: hidden;
-    position: absolute;
-    height: 200px; }
-  .col-sm-4 .portafolio a:hover ~ .informacion {
-    visibility: visible;
-    background: red; }
-
+    height: 230px;
+    border: 3px solid #F2385A;
+    margin: auto;
+    background-size: 100% 100%;
+    animation: banner2 15s infinite;
+    animation-direction: alternate; }
+@keyframes banner2 {
+  0%,30% {
+    background-image: url("../img/triangle.png");
+    opacity: 1; }
+  31%,34% {
+    opacity: 0.1; }
+  35%,65% {
+    opacity: 1;
+    background-image: url("../img/flat.png"); }
+  66%,69% {
+    opacity: 0.1; }
+  70%, 100% {
+    opacity: 1;
+    background-image: url("../img/flatness.png"); } }
 .field1, .field2 {
   margin-bottom: 20px; }
+
+.especialidad a span {
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+  font-size: 150px; }
+.especialidad p:nth-child(2) {
+  font-size: 20px;
+  color: #F2385A; }
+.especialidad p:last-child {
+  font-size: 17px;
+  margin-bottom: 50px; }
 
 .cont-habi {
   height: 170px;
@@ -6416,6 +6380,30 @@ a:hover {
     height: 0px; }
   100% {
     height: 60px; } }
+.portfolio_item .mix {
+  display: none; }
+
+.portfolio-filter ul {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+  .portfolio-filter ul li {
+    border: 3px solid #F1F2F7;
+    color: #000;
+    display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    padding: 8px 22px;
+    cursor: pointer; }
+  .portfolio-filter ul li:active {
+    border: 3px solid #F2385A;
+    color: #000;
+    font-weight: 700; }
+
+.portfolio_item .mix img {
+  float: left;
+  width: 200px; }
+
 #contacto {
   padding-top: 50px;
   height: 560px;
@@ -6447,5 +6435,55 @@ footer {
   padding-top: 20px;
   padding-bottom: 20px;
   color: #2C3E50; }
+
+@media screen and (max-width: 700px) {
+  .titulo p {
+    animation-delay: 0.2s;
+    font-family: "Abril Fatface";
+    color: #F2385A;
+    font-size: 2rem; }
+
+  .banner {
+    width: 60%; }
+    .banner .marco-pantalla {
+      border: 20px solid black;
+      border-radius: 15px;
+      width: 100%; }
+      .banner .marco-pantalla .cont-pantalla {
+        height: 100px; }
+        .banner .marco-pantalla .cont-pantalla .imagen1 {
+          width: 100%;
+          height: 100px;
+          background-image: url("../img/hero5.jpg");
+          background-size: cover;
+          position: relative; }
+          .banner .marco-pantalla .cont-pantalla .imagen1 .imagen2 {
+            background-image: url("../img/portfolio_1.png");
+            position: absolute;
+            background-size: cover;
+            top: 0;
+            left: 0;
+            height: 100%;
+            max-width: 100%;
+            resize: horizontal;
+            overflow: hidden; }
+          .banner .marco-pantalla .cont-pantalla .imagen1 .imagen2:before {
+            content: "\2194";
+            color: white;
+            font-size: 25px;
+            background: rgba(0, 0, 0, 0.7);
+            height: 100%;
+            position: absolute;
+            line-height: 100px;
+            right: 0;
+            top: 0; }
+          .banner .marco-pantalla .cont-pantalla .imagen1 textarea {
+            opacity: 0;
+            width: 20px;
+            height: 10px;
+            position: relative;
+            top: 50%;
+            transform: scaleY(40);
+            cursor: e-resize; } }
 
 /*# sourceMappingURL=main.css.map */
