--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,6 @@
-$Poiret:'Noto Serif';
-$Sigmar:'Abril Fatface';
-$titulo-font:'Abril Fatface';
+$Poiret:'Roboto';
+$Sigmar:'Montserrat';
+$titulo-font:'Montserrat';
 $bg-color:#ffffff;
 $bg-celeste:#F2385A;
 $bg-white:#fff;
@@ -10,3 +10,4 @@ $black:#2C3E50;
 $ensayo:rgba(44, 62, 80, 0.15);
 $bg-border:black;
 $bg-rosa:#F2385A;
+$font-15:15px;
