--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -30,3 +30,44 @@
 	border-bottom-right-radius:15px ;
 	background: $baground;
 }
+// @mixin keyframes($name){
+// 	@-keyframes $name { @content };
+// }
+
+// @mixin animation-name($name){
+// 	animation-name:$name;
+
+// }
+
+// @include keyframes(slider) {
+// 	0%,30%{
+// 		background-image:url($img1);
+// 		opacity:1;
+// 	}
+// 	31%,34%{
+// 		opacity:0.1;
+// 	}
+// 	35%,65%{
+// 		opacity:1;
+// 		background-image:url($img2);
+// 	}
+// 	66%,69%{
+// 		opacity:0.1;
+// 	}
+// 	70%, 100%{
+// 		opacity:1;
+// 		background-image:url($img3);
+// 	}
+// }
+// @mixin portfolio($name,$img1,$img2,$img3) {
+// 	width: 100%;
+// 	height: 300px;
+// 	border: 3px solid $bg-celeste;
+// 	margin:auto;
+// 	//background-image:url('../img/triangle.png');
+// 	background-size:100% 100%;
+// 	@include animation-name(slider);
+// 	animation-duration:10s;
+// 	animation-iteration-count:infinite;
+// 	animation-direction:alternate;	
+// }
