--- a/jade/index.jade
+++ b/jade/index.jade
@@ -93,7 +93,7 @@ body
 				.col-sm-8.col-xs-10
 					.about_p
 						p Trabajos que realize y del que forme parte de proyectos en equipo con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto.
-			.row
+			.row.pb-50
 				.col-md-12.text-center
 					.portfolio-filter
 						ul
@@ -105,21 +105,29 @@ body
 							li.filter(data-filter=".grupal") Grupal
 					.portfolio_item
 						.mix.category-1.css
-							img(src="img/whatsap.png")
+							a(href="http://sarita-coder.github.io/whassapt" target="_blank")
+								img(src="img/whatsap.png")
 						.mix.category-1.jade
-							img(src="img/future-imperfect.png")
+							a(href="http://sarita-coder.github.io/future-imperfect" target="_blank")
+								img(src="img/future-imperfect.png")
 						.mix.category-2.js
-							img(src="img/flatness.png")
+							a(href=""	target="_blank")
+								img(src="img/flatness.png")
 						.mix.category-1.grupal
-							img(src="img/flat.png")
+							a(href=""	target="_blank")
+								img(src="img/flat.png")
 						.mix.category-1.grupal
-							img(src="img/republica.png")
+							a(href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica"	target="_blank")
+								img(src="img/republica.png")
 						.mix.category-2.sass
-							img(src="img/portfolio_1.png")
+							a(href="http://sarita-coder.github.io/Love-Blog"	target="_blank")
+								img(src="img/portfolio_1.png")
 						.mix.category-2.sass
-							img(src="img/triangle.png")
+							a(href="http://sarita-coder.github.io/triangle-free"	target="_blank")
+								img(src="img/triangle.png")
 						.mix.category-2.js
-							img(src="img/reloj_digital.png")
+							a(href="http://sarita-coder.github.io/reloj-digital"	target="_blank")
+								img(src="img/reloj_digital.png")
 
 	.w-100#lema
 		.container.lema.text-center
