--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -235,7 +235,7 @@
 	    		}
 	    		textarea{
 					opacity: 0;
-					width: 20px;
+					min-width: 200px;
 					height: 10px;
 					position:relative;
 					top:50%;
