--- a/jade/index.jade
+++ b/jade/index.jade
@@ -34,8 +34,8 @@ body
 		.opacity
 			.banner
 				.titulo
-					p.text-you.animated.fadeInDown Lo que tú ves
-					p.text-i.animated.fadeInDown Lo que hago
+					p.text-you.animated.fadeInLeft Lo que tú ves
+					p.text-i.animated.fadeInRight Lo que hago
 				.marco-pantalla
 					.cont-pantalla
 						.imagen1
@@ -92,7 +92,7 @@ body
 							span proyectos 
 				.col-sm-8.col-xs-10
 					.about_p
-						p Trabajos que realize y del que forme parte de proyectos en equipo con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto.
+						p Trabajos según la tecnología utilizada y del que forme parte del equipo de proyecto por con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto. 
 			.row.pb-50
 				.col-md-12.text-center
 					.portfolio-filter
@@ -107,24 +107,31 @@ body
 						.mix.category-1.css
 							a(href="http://sarita-coder.github.io/whassapt" target="_blank")
 								img(src="img/whatsap.png")
+
 						.mix.category-1.jade
 							a(href="http://sarita-coder.github.io/future-imperfect" target="_blank")
 								img(src="img/future-imperfect.png")
+
 						.mix.category-2.js
-							a(href=""	target="_blank")
+							a(href="http://sarita-coder.github.io/future-imperfect"	target="_blank")
 								img(src="img/flatness.png")
+
 						.mix.category-1.grupal
-							a(href=""	target="_blank")
+							a(href="http://sarita-coder.github.io/future-imperfect"	target="_blank")
 								img(src="img/flat.png")
+
 						.mix.category-1.grupal
 							a(href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica"	target="_blank")
 								img(src="img/republica.png")
+
 						.mix.category-2.sass
 							a(href="http://sarita-coder.github.io/Love-Blog"	target="_blank")
 								img(src="img/portfolio_1.png")
+
 						.mix.category-2.sass
 							a(href="http://sarita-coder.github.io/triangle-free"	target="_blank")
 								img(src="img/triangle.png")
+									
 						.mix.category-2.js
 							a(href="http://sarita-coder.github.io/reloj-digital"	target="_blank")
 								img(src="img/reloj_digital.png")
