cambios en ´portafolio

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -92,7 +92,7 @@ body
 							span proyectos 
 				.col-sm-8.col-xs-10
 					.about_p
-						p Trabajos según la tecnología utilizada y del que forme parte del equipo de proyecto por con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto. 
+						p Trabajos según la tecnología utilizada y del que forme parte del equipo, con tiempos de entrega especiales me han permitido aprender y seguir evolucionando en cada proyecto. 
 			.row.pb-50
 				.col-md-12.text-center
 					.portfolio-filter
@@ -112,29 +112,30 @@ body
 							a(href="http://sarita-coder.github.io/future-imperfect" target="_blank")
 								img(src="img/future-imperfect.png")
 
-						.mix.category-2.js
-							a(href="http://sarita-coder.github.io/future-imperfect"	target="_blank")
-								img(src="img/flatness.png")
+						.mix.category-1.js
+							a(href="http://sarita-coder.github.io/reloj-digital" target="_blank")
+								img(src="img/reloj_digital.png")
 
 						.mix.category-1.grupal
-							a(href="http://sarita-coder.github.io/future-imperfect"	target="_blank")
-								img(src="img/flat.png")
-
-						.mix.category-1.grupal
-							a(href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica"	target="_blank")
+							a(href="http://emilyvivancocuba.github.io/Examen-grupal-La-Republica" target="_blank")
 								img(src="img/republica.png")
 
-						.mix.category-2.sass
-							a(href="http://sarita-coder.github.io/Love-Blog"	target="_blank")
+						.mix.category-1.sass
+							a(href="http://sarita-coder.github.io/Love-Blog" target="_blank")
 								img(src="img/portfolio_1.png")
 
-						.mix.category-2.sass
-							a(href="http://sarita-coder.github.io/triangle-free"	target="_blank")
+						.mix.category-1.sass
+							a(href="http://sarita-coder.github.io/triangle-free" target="_blank")
 								img(src="img/triangle.png")
-									
-						.mix.category-2.js
-							a(href="http://sarita-coder.github.io/reloj-digital"	target="_blank")
-								img(src="img/reloj_digital.png")
+
+						.mix.category-1.jade
+							a(href="http://sarita-coder.github.io/future-imperfect" target="_blank")
+								img(src="img/flatness.png")
+
+						.mix.category-1.sass
+							a(href="http://sarita-coder.github.io/future-imperfect" target="_blank")
+								img(src="img/flat.png")
+
 
 	.w-100#lema
 		.container.lema.text-center
