--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,6 +5,7 @@ head
 	meta(charset="UTF-8")
 	title Sarita Coder
 	link(rel="stylesheet", href="font-awesome/css/font-awesome.min.css")
+	meta(name="viewport" content="width=device-width, initial-scale=1")
 	link(rel="stylesheet", href="css/animate.css")
 	link(rel="stylesheet", href="css/main.css")
 	
@@ -35,7 +36,7 @@ body
 			.banner
 				.titulo
 					p.text-you.animated.fadeInLeft Lo que tú ves
-					p.text-i.animated.fadeInRight Lo que hago
+					p.text-i.animated.fadeInRight Lo que yo hago
 				.marco-pantalla
 					.cont-pantalla
 						.imagen1
@@ -59,10 +60,6 @@ body
 			//li
 				a(href="" target="_blank") Contactame
 
-
-
-	
-	
 	.main#Sobremi
 		.container.text-center
 			.row
