--- a/jade/index.jade
+++ b/jade/index.jade
@@ -35,7 +35,7 @@ body
 			.banner
 				.titulo
 					p.text-you.animated.fadeInDown Lo que tú ves
-					p.text-i.animated.fadeInDown Lo que hago
+					p.text-i.animated.fadeInDown Lo que hago  :) 
 				.marco-pantalla
 					.cont-pantalla
 						.imagen1
